designed create report page

--- a/app/components/report_list/report_list_view.html
+++ b/app/components/report_list/report_list_view.html
@@ -1,13 +1,13 @@
 <h1 style="float: left">Report List</h1>
 
-<div class="btn-group" style="float:right; margin-top: 28px;">
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-    2014 <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu dropdown-menu-right" role="menu">
-    <li><a href="#">2013</a></li>
-    <li><a href="#">2014</a></li>
-  </ul>
+<div class="btn-group page-button">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+        2014 <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-right" role="menu">
+        <li><a href="#">2013</a></li>
+        <li><a href="#">2014</a></li>
+    </ul>
 </div>
 
 <div style="clear: both"></div>
