--- a/app/components/create_report/create_report_view.html
+++ b/app/components/create_report/create_report_view.html
@@ -1,1 +1,33 @@
 <h1>Create Report</h1>
+
+<br/>
+
+<div class="col-sm-6">
+    <form role="form">
+        <div class="form-group">
+            <label>Customer</label>
+            <select class="form-control">
+                <option>berg Computers</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Report Period</label>
+
+            <div class="form-inline">
+                <select class="form-control">
+                    <option>June</option>
+                    <option>July</option>
+                    <option>August</option>
+                </select>
+                <select class="form-control">
+                    <option>2013</option>
+                    <option selected>2014</option>
+                    <option>2015</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group form-actions">
+            <button type="submit" class="btn btn-default btn-primary">Create</button>
+        </div>
+    </form>
+</div>
