--- a/app/components/report_list/report_list_view.html
+++ b/app/components/report_list/report_list_view.html
@@ -25,7 +25,7 @@
     </thead>
     <tbody>
         <tr>
-            <td>January 2014</td>
+            <td><a href="#/report/1">January 2014</a></td>
             <td>117</td>
             <td>0</td>
             <td>berg Computers</td>
@@ -67,3 +67,7 @@
         </tr>
     </tbody>
 </table>
+
+<div class="form-group form-actions">
+    <button type="submit" class="btn btn-default btn-primary">Create Report</button>
+</div>
