--- a/app/components/create_report/create_report_view.html
+++ b/app/components/create_report/create_report_view.html
@@ -22,42 +22,14 @@
         </div>
         <div class="form-group">
             <label>Report Period</label>
-
-            <div class="form-inline">
-                <select class="form-control">
-                    <option>June</option>
-                    <option>July</option>
-                    <option>August</option>
-                </select>
-                <select class="form-control">
-                    <option>2013</option>
-                    <option selected>2014</option>
-                    <option>2015</option>
-                </select>
+            <div class="input-group date month-only">
+                <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
             </div>
         </div>
         <div class="form-group">
             <label>Report Date</label>
-
-            <div class="form-inline">
-                <select class="form-control">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
-                    <option>7</option>
-                </select>
-                <select class="form-control">
-                    <option>July</option>
-                    <option>August</option>
-                </select>
-                <select class="form-control">
-                    <option>2013</option>
-                    <option selected>2014</option>
-                    <option>2015</option>
-                </select>
+            <div class="input-group date days">
+                <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
             </div>
         </div>
 
