--- a/app/components/create_report/create_report_view.html
+++ b/app/components/create_report/create_report_view.html
@@ -2,33 +2,37 @@
 
     <br/>
 
-    <div class="col-sm-6">
-    <form role="form">
+    <div class="col-md-8 col-lg-6">
+    <form ng-submit="submit()">
         <div class="form-group">
             <label>Number</label>
-            <input type="text" class="form-control" value="61" />
+            <input ng-model="number" type="text" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label>Invoice number</label>
+            <input ng-model="invoice_number" type="text" class="form-control" />
         </div>
         <div class="form-group">
             <label>Service Provider</label>
-            <select class="form-control">
-                <option>SC Toolworks SRL</option>
+            <select ng-model="selectedProvider" class="form-control" disabled="disabled">
+                <option selected="selected">{{selectedProvider}}</option>
             </select>
         </div>
         <div class="form-group">
             <label>Customer</label>
-            <select class="form-control">
-                <option>SC Berg Computers SRL</option>
+            <select ng-model="selectedCustomer" class="form-control">
+                <option ng-repeat="customer in customers">{{customer}}</option>
             </select>
         </div>
         <div class="form-group">
             <label>Report Period</label>
-            <div class="input-group date month-only">
+            <div class="input-group date month-only col-sm-8">
                 <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
             </div>
         </div>
         <div class="form-group">
             <label>Report Date</label>
-            <div class="input-group date days">
+            <div class="input-group date days col-sm-8">
                 <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
             </div>
         </div>
