--- a/app/components/report_list/report_list_view.html
+++ b/app/components/report_list/report_list_view.html
@@ -25,25 +25,33 @@
         </tr>
     </thead>
     <tbody>
+        <tr ng-if="reports.length == 0">
+            <td colspan="6" class="empty-table">No entries</td>
+        </tr>
         <tr ng-repeat="report in reports">
-            <td><input type="checkbox" /></td>
+            <td><input ng-model="report.selected" ng-click="checkboxClicked()" type="checkbox" /></td>
             <td><a href="#/report/{{report.number}}">{{report.period_month | monthName}} {{report.period_year}}</a></td>
             <td>{{report.totalHours}}</td>
             <td>{{report.specialHours.Hypercare}}</td>
             <td>{{report.client}}</td>
-            <td>!07 February 2014</td>
+            <td>{{report.created_at | date : 'dd MMM yyyy'}}</td>
         </tr>
-        <tr>
+        <tr ng-if="reports.length > 0">
             <td></td>
             <th>Average</th>
-            <th>{{averageHours}}</th>
-            <th>{{averageHypercare}}</th>
+            <th>{{averageHours | number:2}}</th>
+            <th>{{averageHypercare | number:2}}</th>
             <th colspan="2">&nbsp;</th>
         </tr>
     </tbody>
 </table>
 
 <div class="form-group form-actions">
-    <button type="submit" class="btn btn-default btn-primary">Create Report</button>
-    <button type="submit" class="btn btn-default" disabled="disabled">Delete selected</button>
+    <button type="submit"
+            ng-click="createReport()"
+            class="btn btn-default btn-primary">Create Report</button>
+    <button type="button"
+            ng-disabled="deleteDisabled"
+            ng-click="deleteReports()"
+            class="btn btn-default" >Delete selected</button>
 </div>
