--- a/app/components/report/report_view.html
+++ b/app/components/report/report_view.html
@@ -53,7 +53,7 @@
             <td colspan="5" class="empty-table">No entries</td>
         </tr>
         <tr ng-repeat="entry in report.entries">
-            <td><input type="checkbox"/></td>
+            <td><input ng-model="entry.selected" ng-click="updateDeleteBtnState()" type="checkbox" /></td>
             <td>{{entry.date_day}} {{entry.date_month | monthName}} {{entry.date_year}}</td>
             <td>{{entry.project}}</td>
             <td>{{entry.description}}</td>
@@ -63,9 +63,14 @@
     </table>
 
     <div class="form-group form-actions">
-        <button type="submit" class="btn btn-default btn-primary" data-toggle="modal" data-target="#myModal">Add Entry
-        </button>
-        <button type="submit" class="btn btn-default" disabled="disabled">Delete selected</button>
+        <button type="submit"
+                class="btn btn-default btn-primary"
+                data-toggle="modal"
+                data-target="#myModal">Add Entry</button>
+        <button type="submit"
+                class="btn btn-default"
+                ng-disabled="deleteDisabled"
+                ng-click="deleteEntries()">Delete selected</button>
     </div>
 </div>
 
