--- a/app/components/create_report/create_report_view.html
+++ b/app/components/create_report/create_report_view.html
@@ -10,7 +10,7 @@
         </div>
         <div class="form-group">
             <label>Invoice number</label>
-            <input ng-model="invoice_number" type="text" class="form-control" />
+            <input ng-model="invoiceNumber" type="text" class="form-control" />
         </div>
         <div class="form-group">
             <label>Service Provider</label>
