--- a/app/components/create_report/create_report_view.html
+++ b/app/components/create_report/create_report_view.html
@@ -32,9 +32,7 @@
         </div>
         <div class="form-group">
             <label>Report Date</label>
-            <div class="input-group date days col-sm-8">
-                <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-            </div>
+            <twk-calendar-input ng-model="reportDate"/>
         </div>
 
         <div class="form-group form-actions">
