--- a/app/components/create_report/create_report_view.html
+++ b/app/components/create_report/create_report_view.html
@@ -26,13 +26,11 @@
         </div>
         <div class="form-group">
             <label>Report Period</label>
-            <div class="input-group date month-only col-sm-8">
-                <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-            </div>
+            <twk-calendar-input ng-model="reportPeriod" type="month" />
         </div>
         <div class="form-group">
             <label>Report Date</label>
-            <twk-calendar-input ng-model="reportDate"/>
+            <twk-calendar-input ng-model="reportDate" />
         </div>
 
         <div class="form-group form-actions">
