--- a/app/components/report/report_view.html
+++ b/app/components/report/report_view.html
@@ -5,7 +5,7 @@
 <div class="report-data">
     <div class="col-md-6 col-lg-4">
         <label>Number:</label>
-        {{report.formatted_report_number}}
+        {{report.formattedReportNumber}}
     </div>
     <div class="col-md-6 col-lg-4">
         <label>Date:</label>
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-6 col-lg-4">
         <label>Invoice#:</label>
-        {{report.formatted_invoice_number}}
+        {{report.formattedInvoiceNumber}}
     </div>
     <div class="col-md-6 col-lg-4">
         <label>Service provider:</label>
@@ -25,7 +25,7 @@
     </div>
     <div class="col-md-6 col-lg-4">
         <label>Report Period:</label>
-        {{report.period_month | monthName}} {{report.period_year}}
+        {{report.periodMonth | monthName}} {{report.periodYear}}
     </div>
     <div class="col-md-6 col-lg-4">
         <label>Total hours:</label>
@@ -54,7 +54,7 @@
         </tr>
         <tr ng-repeat="entry in report.entries">
             <td><input ng-model="entry.selected" ng-click="updateDeleteBtnState()" type="checkbox" /></td>
-            <td>{{entry.date_day}} {{entry.date_month | monthName}} {{entry.date_year}}</td>
+            <td>{{entry.dateDay}} {{entry.dateMonth | monthName}} {{entry.dateYear}}</td>
             <td>{{entry.project}}</td>
             <td>{{entry.description}}</td>
             <td>{{entry.time}}</td>
@@ -87,10 +87,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label class="control-label">Date:</label>
-
-                        <div class="input-group date">
-                            <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                        </div>
+                        <twk-calendar-input ng-model="date" />
                     </div>
                     <div class="form-group">
                         <label class="control-label">Project:</label>
