--- a/app/components/report/report_view.html
+++ b/app/components/report/report_view.html
@@ -3,111 +3,113 @@
 <br/>
 
 <div class="report-data">
-    <div class="col-md-6 col-lg-4">
-        <label>Number:</label>
-        {{report.formattedReportNumber}}
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Date:</label>
-        !01 July 2014
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Invoice#:</label>
-        {{report.formattedInvoiceNumber}}
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Service provider:</label>
-        {{report.provider}}
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Customer:</label>
-        {{report.client}}
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Report Period:</label>
-        {{report.periodMonth | monthName}} {{report.periodYear}}
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Total hours:</label>
-        {{report.totalHours}}
-    </div>
-    <div class="col-md-6 col-lg-4">
-        <label>Hypercare hours:</label>
-        {{report.specialHours.Hypercare}}
-    </div>
+	<div class="col-md-6 col-lg-4">
+		<label>Number:</label>
+		{{report.formattedReportNumber}}
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Date:</label>
+		!01 July 2014
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Invoice#:</label>
+		{{report.formattedInvoiceNumber}}
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Service provider:</label>
+		{{report.provider}}
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Customer:</label>
+		{{report.client}}
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Report Period:</label>
+		{{report.periodMonth | monthName}} {{report.periodYear}}
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Total hours:</label>
+		{{report.totalHours}}
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<label>Hypercare hours:</label>
+		{{report.specialHours.Hypercare}}
+	</div>
 </div>
 
 <div class="col-sm-12">
-    <table class="table table-hover" style="margin-top: 30px">
-        <thead>
-        <tr>
-            <th class="checkbox-column"></th>
-            <th>Date</th>
-            <th>Project</th>
-            <th>Description</th>
-            <th>Time</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-if="report.entries.length == 0">
-            <td colspan="5" class="empty-table">No entries</td>
-        </tr>
-        <tr ng-repeat="entry in report.entries">
-            <td><input ng-model="entry.selected" ng-click="updateDeleteBtnState()" type="checkbox" /></td>
-            <td>{{entry.dateDay}} {{entry.dateMonth | monthName}} {{entry.dateYear}}</td>
-            <td>{{entry.project}}</td>
-            <td>{{entry.description}}</td>
-            <td>{{entry.time}}</td>
-        </tr>
-        </tbody>
-    </table>
+	<table class="table table-hover" style="margin-top: 30px">
+		<thead>
+		<tr>
+			<th class="checkbox-column"></th>
+			<th>Date</th>
+			<th>Project</th>
+			<th>Description</th>
+			<th>Time</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr ng-if="report.entries.length == 0">
+			<td colspan="5" class="empty-table">No entries</td>
+		</tr>
+		<tr ng-repeat="entry in report.entries">
+			<td><input ng-model="entry.selected" ng-click="updateDeleteBtnState()" type="checkbox"/></td>
+			<td>{{entry.dateDay}} {{entry.dateMonth | monthName}} {{entry.dateYear}}</td>
+			<td>{{entry.project}}</td>
+			<td>{{entry.description}}</td>
+			<td>{{entry.time}}</td>
+		</tr>
+		</tbody>
+	</table>
 
-    <div class="form-group form-actions">
-        <button type="submit"
-                class="btn btn-default btn-primary"
-                data-toggle="modal"
-                data-target="#myModal">Add Entry</button>
-        <button type="submit"
-                class="btn btn-default"
-                ng-disabled="deleteDisabled"
-                ng-click="deleteEntries()">Delete selected</button>
-    </div>
+	<div class="form-group form-actions">
+		<button type="submit"
+						class="btn btn-default btn-primary"
+						data-toggle="modal"
+						data-target="#myModal">Add Entry
+		</button>
+		<button type="submit"
+						class="btn btn-default"
+						ng-disabled="deleteDisabled"
+						ng-click="deleteEntries()">Delete selected
+		</button>
+	</div>
 </div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form ng-submit="addEntry()">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span
-                            aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Add Entry</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label class="control-label">Date:</label>
-                        <twk-calendar-input ng-model="date" />
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Project:</label>
-                        <input class="form-control" type="text" ng-model="project"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Description:</label>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<form ng-submit="addEntry()">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span
+							aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel">Add Entry</h4>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<label class="control-label">Date:</label>
+						<twk-calendar-input ng-model="date"/>
+					</div>
+					<div class="form-group">
+						<label class="control-label">Project:</label>
+						<input class="form-control" type="text" ng-model="project"/>
+					</div>
+					<div class="form-group">
+						<label class="control-label">Description:</label>
                         <textarea class="form-control" id="message-text" ng-model="description">
                         </textarea>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Time:</label>
-                        <input class="form-control" type="text" ng-model="time"/>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
-                </div>
-            </form>
-        </div>
-    </div>
+					</div>
+					<div class="form-group">
+						<label class="control-label">Time:</label>
+						<input class="form-control" type="text" ng-model="time"/>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="submit" class="btn btn-primary">Save changes</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
